@@ -1230,6 +1230,7 @@ const char *line;
 int *color, *attr;
 {
     struct menucoloring *tmpmc;
+    boolean foundcolor = FALSE, foundattr = FALSE;
     char str[BUFSZ];
 
     strcpy(str, line);
@@ -1246,11 +1247,19 @@ int *color, *attr;
 # else
 	    if (pmatch(tmpmc->match, str)) {
 # endif
-		*color = tmpmc->color;
-		*attr = tmpmc->attr;
-		return TRUE;
+		if (!foundcolor && tmpmc->color != CLR_UNDEFINED) {
+		    *color = tmpmc->color;
+		    foundcolor = TRUE;
+		}
+		if (!foundattr && tmpmc->attr != ATR_UNDEFINED) {
+		    *attr = tmpmc->attr;
+		    foundattr = TRUE;
+		}
+		if (foundattr && foundcolor) return TRUE;
 	    }
-    return FALSE;
+    if (foundcolor && !foundattr) *attr = ATR_NONE;
+    if (foundattr && !foundcolor) *color = NO_COLOR;
+    return foundcolor || foundattr;
 }
 #endif /* MENU_COLOR */
 
